Git_WGBH_QC/src/objects/Campaign_Test_Code__c.object
<CustomObject>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Test Codes</relationshipLabel>
        <relationshipName>Campaign_Test_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Campaign Test Code</label>
    <nameField>
        <label>Attribute</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Test Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>